@@ -5,6 +5,7 @@ Changes in version 1.8.0 beta (2009-04-16):
 
 - Added orthogonal line shape (wxSFOrthoShape). This line consists of subsegments orthogonal to base axis.
 - Added new arrow style "diamond arrow" (wxSFDiamondArrow) and "circle arrow" (wxSFCircleArrow).
+- Added abbility to set arrows' fill and border style.
 - Added abbility to set line's docking point to its starting (value 'sfdvLINESHAPE_DOCKPOINT_START') or ending
   (value 'sfdvLINESHAPE_DOCKPOINT_END') point.
 - Renamed function wxSFShapeBase::IsInside(const wxPoint& pos) to wxSFShapeBase::Contains(const wxPoint& pos) due to
